# mastodon-curator

./: .gitignore  README.md  prune.py  pyproject.toml
curator/: __init__.py  main.py
curator/discover/: discover.py
curator/masto_api/: accounts.py  api.py  timelines.py
curator/prune/: prune.py
curator/utils/: output.py  utils.py
