[tool.poetry]
name = "curator"
version = "0.1.0"
description = "Curate your timelines, discover people and hashtags."
authors = ["Christoffer Strömblad <github@x90.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
tqdm = "^4.65.0"
requests = "^2.31.0"
pytest = "^7.4.0"
Flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
